--- a/tutorial-5/ponynote/frontend/package.json
+++ b/tutorial-5/ponynote/frontend/package.json
@@ -42,6 +42,8 @@
     "react-app-polyfill": "^1.0.3",
     "react-dev-utils": "^9.0.4",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
     "style-loader": "1.0.0",
@@ -131,6 +133,7 @@
     "fs-extra": "^7.0.1",
     "is-wsl": "^1.1.0",
     "jest-resolve": "^24.9.0",
+    "react-router-dom": "^5.0.1",
     "resolve": "^1.12.0",
     "semver": "^6.3.0",
     "ts-pnp": "^1.1.4",
